Bug 1271770 - Fallback to WARP if accelerated ANGLE fails r=BenWa,jrmuizel

MozReview-Commit-ID: LDJON8Vie5R

--HG--
extra : rebase_source : 9f1dda1f931b8b4ad91acda5a573587752e8017d